--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <!-- Halo dunia -->
     <meta charset="utf-8">
     <title>About IRVAN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
